--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Emi Takekoshi</span>
-                  <span>French Designer</span>
+                  <span>XXX</span>
                   <span>Working as a Freelance</span>
                 </span>
                 <span id="typed"></span>
