--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Emi Takekoshi</span>
-                  <span>XXX</span>
-                  <span>Working as a Freelance</span>
+                  <span>XXXxxxxxxxxxxxxx</span>
+                  <span>University Student</span>
                 </span>
                 <span id="typed"></span>
               </h1>
