--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./index.html" title="">　</a></li>
+          <li><a href="./works.html" title=""> 歴史</a></li>
+          <li><a href="./about.html" title="">政治</a></li>
+          <li><a href="./contact.html" title="">建造物</a></li>
+          <li><a href="./components.html" title="">料理・食材Components</a></li>
         </ul>
 
 
