--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a href="./works.html" title=""> 歴史</a></li>
           <li><a href="./about.html" title="">政治</a></li>
           <li><a href="./contact.html" title="">建造物</a></li>
-          <li><a href="./components.html" title="">料理・食材Components</a></li>
+          <li><a href="./components.html" title="">料理・食材</a></li>
         </ul>
 
 
