--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello, Mr. Holmes!<br>
+              <h1>Hello, everyone!<br>
                 <span id="typed-strings">
-                  <span>I'm James Moriarty</span>
-                  <span>XXXxxxxxxxxxxxxx</span>
-                  <span>Let's make it a good time, shall we?</span>
+                  <span>I'm Emi Takekoshi</span>
+                  <span>I'm a student who loves France.</span>
+                  <span>Let's learn about France together！ Are you ready?</span>
                 </span>
                 <span id="typed"></span>
               </h1>
