--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="text-content">
               <h1>Hello, everyone!<br>
                 <span id="typed-strings">
-                  <span>I'm Emi Takekoshi</span>
+                  <span>I'm Emi Takekoshi.</span>
                   <span>I'm a student who loves France.</span>
                   <span>Let's learn about France together！ Are you ready?</span>
                 </span>
