--- a/about.html
+++ b/about.html
@@ -62,9 +62,8 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
+                  <h3>ルーブル美術館</h3>
+                  <p>ルーヴル美術館はパリにあるフランスの国立美術館だ。世界最大級の美術館であるとともに世界最大級の史跡のひとつで、パリ中心部1区のセーヌ川の右岸に位置する。収蔵品38万点以上にも及ぶ。</p>
                   <h3>Ut enim ad minim </h3>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
