--- a/about.html
+++ b/about.html
@@ -64,10 +64,8 @@
                 <div class="col-xs-12 col-md-6">
                   <h3>ルーブル美術館</h3>
                   <p>ルーヴル美術館はパリにあるフランスの国立美術館だ。世界最大級の美術館であるとともに世界最大級の史跡のひとつで、パリ中心部1区のセーヌ川の右岸に位置する。収蔵品38万点以上にも及ぶ。</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                  <h3>エッフェル塔</h3>
+                  <p>エッフェル塔は、フランスの首都パリの象徴的な名所となっており、パリ7区のシャン・ド・マルス公園の北西に位置する。また、エッフェル塔の名は塔の設計および建設者であるギュスターヴ・エッフェルに由来する。
                   <h3>Maecenas luctus at sem quis varius</h3>
                   <p>
                   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
