--- a/about.html
+++ b/about.html
@@ -66,9 +66,8 @@
                   <p>ルーヴル美術館はパリにあるフランスの国立美術館だ。世界最大級の美術館であるとともに世界最大級の史跡のひとつで、パリ中心部1区のセーヌ川の右岸に位置する。収蔵品38万点以上にも及ぶ。</p>
                   <h3>エッフェル塔</h3>
                   <p>エッフェル塔は、フランスの首都パリの象徴的な名所となっており、パリ7区のシャン・ド・マルス公園の北西に位置する。また、エッフェル塔の名は塔の設計および建設者であるギュスターヴ・エッフェルに由来する。
-                  <h3>Maecenas luctus at sem quis varius</h3>
-                  <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  <h3>モン・サン＝ミシェル</h3>
+                  <p>モン・サン＝ミシェルはフランス西海岸、サン・マロ湾上に浮かぶ小島、及びその上にそびえる修道院である。カトリックの巡礼地のひとつであり「西洋の驚異」と称された。更に、1979年には「モン＝サン＝ミシェルとその湾」としてユネスコの世界遺産に登録されている。</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
