--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                   <h3>エッフェル塔</h3>
                   <p>エッフェル塔は、フランスの首都パリの象徴的な名所となっており、パリ7区のシャン・ド・マルス公園の北西に位置する。また、エッフェル塔の名は塔の設計および建設者であるギュスターヴ・エッフェルに由来する。
                   <h3>モン・サン＝ミシェル</h3>
-                  <p>モン・サン＝ミシェルはフランス西海岸、サン・マロ湾上に浮かぶ小島、及びその上にそびえる修道院である。カトリックの巡礼地のひとつであり「西洋の驚異」と称された。更に、1979年には「モン＝サン＝ミシェルとその湾」としてユネスコの世界遺産に登録されている。</p>
+                  <p>モン・サン＝ミシェルはフランス西海岸、サン・マロ湾上に浮かぶ小島、及びその上にそびえる修道院である。カトリックの巡礼地のひとつであり「西洋の驚異」と称された。更に、1979年には「モン・サン＝ミシェルとその湾」としてユネスコの世界遺産に登録されている。</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
