--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">　</a></li>
-          <li><a href="./works.html" title=""> 歴史</a></li>
+          <li><a href="./works.html" title=""> 建造物</a></li>
           <li><a href="./about.html" title="">政治</a></li>
-          <li><a href="./contact.html" title="">建造物</a></li>
+          <li><a href="./contact.html" title="">歴史</a></li>
           <li><a href="./components.html" title="">料理・食材</a></li>
         </ul>
 
