--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="./index.html" title="">01:ホーム</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a href="./about.html" title="">03:人気観光名所</a></li>
+          <li><a href="./contact.html" title="">04:ルーブル美術館公式ホームページ</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
 
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">01 : About me</h1>
+            <h1 class="h2">人気観光名所</h1>
           </div>
           
           <div class="row">
