--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">　</a></li>
-          <li><a href="./works.html" title=""> 建造物</a></li>
-          <li><a href="./about.html" title="">政治</a></li>
-          <li><a href="./contact.html" title="">歴史</a></li>
-          <li><a href="./components.html" title="">料理・食材</a></li>
+          <li><a href="./index.html" title="">ホーム</a></li>
+          <li><a href="./works.html" title="">料理・食材</a></li>
+          <li><a href="./about.html" title="">人気観光名所</a></li>
+          <li><a href="./contact.html" title="">ルーブル美術館公式ホームページ</a></li>
+          <li><a href="./components.html" title="">歴史</a></li>
         </ul>
 
 
