--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01:ホーム</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
+          <li><a href="./works.html" title="">02:料理・食材</a></li>
           <li><a href="./about.html" title="">03:人気観光名所</a></li>
           <li><a href="./contact.html" title="">04:ルーブル美術館公式ホームページ</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./components.html" title="">05:歴史</a></li>
         </ul>
 
 
