--- a/works.html
+++ b/works.html
@@ -56,8 +56,8 @@
       
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
-          <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <h1 class="h2">02:料理・食材</h1>
+          <p>フランス料理は、フランスで発祥した食文化及び調理技術であるが、フランスという全国名義で一括されるものではなく、フランスの各地域に存在している郷土食文化の集合体としての定義が強調されている。現代では世界三大料理の一つに数えられており、2010年にはフレンチガストロノミー（フランス美食学）がユネスコの無形文化遺産に登録された。</p>
         </div>
       </div>
 
