--- a/works.html
+++ b/works.html
@@ -75,8 +75,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <h3>ガレット</h3>
+                        <p>フランス北西部の郷土料理であり、フランス語で「円く焼いた料理」を意味する。</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -86,8 +86,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                        <h3>エスカルゴ</h3>
+                        <p>かたつむりをパセリ，ガーリック，バターで味付けした料理であり、前菜メニューとして有名。</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -97,8 +97,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>オニオンスープ</h3>
+                        <p>バターで玉ねぎをじっくり炒め、ブイヨンを混ぜ煮込んだフランス料理前菜に入っている典型的なメニュー。</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -115,8 +115,8 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>フォアグラ</h3>
+                      <p>アヒルやガチョウの内臓部分を調理した高級食材。また、フォアグラステーキは一般的にバルサミコ酢を使ったソースまたは酸味のあるベリーなどのフルーツをつかったソースが多く見られる。</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
