--- a/works.html
+++ b/works.html
@@ -126,8 +126,8 @@
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <h3>ムール貝</h3>
+                        <p>ムール貝を白ワインで蒸したもの。レストランというより、カフェやブラッセリーで頂く大衆料理の一品である。</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -138,8 +138,8 @@
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>ポワレ</h3>
+                        <p>ポワレとは蒸し焼きという意味合いの調理法を指す。フランスでは鱈、鯛、鱸などの白身魚のポワレが一般的である。</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
