--- a/work.html
+++ b/work.html
@@ -37,11 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./index.html" title="">01:ホーム</a></li>
+          <li><a href="./works.html" title="">02:料理・食材</a></li>
+          <li><a href="./about.html" title="">03:人気観光名所</a></li>
+          <li><a href="./contact.html" title="">04:ルーブル美術館公式ホームページ</a></li>
+          <li><a href="./components.html" title="">05:歴史</a></li>
         </ul>
 
 
@@ -66,7 +66,7 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">おすすめスイーツ♡</h1>
           </div>
           <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
 
