--- a/work.html
+++ b/work.html
@@ -68,11 +68,11 @@
           <div class="text-center">
             <h1 class="h2">おすすめスイーツ♡</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>ミルフィーユ</p>
 
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>ミルフィーユは、フランス発祥の菓子の一種です。歴史のある菓子であり、形状や製法も様々ですが、現代では3枚のフィユタージュまたはパート・フィユテと呼ばれるパイ生地にクリームをはさみ、表面に粉砂糖がまぶされたもの、あるいは糖衣がけされているものが基本とされています。</p>
+            <small class="pull-right">Emi Takekoshi</small>
           </blockquote>
         </div>
       </div>
