--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
           <div class="text-center">
             <h1 class="h2">おすすめスイーツ♡</h1>
           </div>
-          <p>ミルフィーユ</p>
+          <p>〈ミルフィーユ〉</p>
 
           <blockquote>
             <p>ミルフィーユは、フランス発祥の菓子の一種です。歴史のある菓子であり、形状や製法も様々ですが、現代では3枚のフィユタージュまたはパート・フィユテと呼ばれるパイ生地にクリームをはさみ、表面に粉砂糖がまぶされたもの、あるいは糖衣がけされているものが基本とされています。</p>
