--- a/contact.html
+++ b/contact.html
@@ -80,22 +80,22 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          +33 1 40 20 53 17 
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          http://www.louvre.fr/
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Musee du Louvre 75001 Paris
                         </li>
                       </ul>
-                      <h3>Follow me on social networks</h3>
+                      <h3>アクセス：地下鉄1,7号線パレ・ロワイヤル・ミュゼ・デュ・ルーブル(Palais Royal-Musee du Louvre)駅から徒歩1分</h3>
                       <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
