--- a/components.html
+++ b/components.html
@@ -58,14 +58,8 @@
       <div class="col-xs-12 col-md-6">
 
         <div class="template-example">
-          <h2 class="template-title-example">Text</h2>
-          <p>This is bold and this is semi bold and <b>this is extra bold</b>. This is italic and this is extra light and this is light
-          and this is regular. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <h2 class="template-title-example">フランス、ルネサンス</h2>
+          <p>フランス語で「再生」を意味するルネサンスは15世紀から17世紀初頭のフランスの文化芸術運動だ。この期間は、ヨーロッパの芸術的かつ文化的な “再生”を定義するためにフランスの歴史学者ジュール・ミケレが最初に使用した言葉である汎ヨーロッパルネサンスと関連している。
 
           <blockquote>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
