--- a/components.html
+++ b/components.html
@@ -106,7 +106,7 @@
 
       <div class="col-xs-12 col-md-6">
         <div class="template-example">
-          <h2 class="template-title-example">Icons</h2>
+          <h2 class="template-title-example"></h2>
           
           <div class="row">
             
