--- a/components.html
+++ b/components.html
@@ -145,15 +145,13 @@
         </div>
 
         <div class="template-example">
-          <h2 class="template-title-example">Buttons</h2>
+          <h2 class="template-title-example">昔からフランスととても関係があるイタリアの美術についても少し紹介！</h2>
           <div class="row">
             <div class="col-md-6">
-              <h3 class="template-title-example">Primary</h2>
+              <h3 class="template-title-example">ローマ美術（前8世紀～後5世紀）</h2>
               <div class="row">
                   <div class="col-md-6">
-                  <p><a href="" class="btn btn-primary btn-lg">Primary Large</a></p>
-                  <p><a href="" class="btn btn-primary">Primary </a></p>
-                  <p><a href="" class="btn btn-primary btn-sm">Primary Small</a></p>
+                  <p><a href="" class="btn btn-primary btn-lg"></a></p>
                 </div>
               </div>
 
@@ -161,12 +159,10 @@
             </div>
 
             <div class="col-md-6">
-              <h3 class="template-title-example">Default</h2>
+              <h3 class="template-title-example">ビザンチン美術（4世紀～13世紀）</h2>
               <div class="row">
                   <div class="col-md-6">
-                  <p><a href="" class="btn btn-default btn-lg">Default Large</a></p>
-                  <p><a href="" class="btn btn-default">Default </a></p>
-                  <p><a href="" class="btn btn-default btn-sm">Default Small</a></p>
+                  <p><a href="" class="btn btn-default btn-lg"></a></p>
                 </div>
               </div>
 
