--- a/components.html
+++ b/components.html
@@ -111,7 +111,7 @@
           <div class="row">
             
             <div class="col-md-6">
-               <h3 class="template-title-example"></h2>
+               <h3 class="template-title-example">ローマ美術（前8世紀～後5世紀）</h2>
                 <ul class="list-icons">
                   <li>
                     <span class="fa-icon">
@@ -148,7 +148,7 @@
           <h2 class="template-title-example">昔からフランスととても関係があるイタリアの美術についても少し紹介！</h2>
           <div class="row">
             <div class="col-md-6">
-              <h3 class="template-title-example">ローマ美術（前8世紀～後5世紀）</h2>
+              <h3 class="template-title-example">ビザンチン美術（4世紀～13世紀）</h2>
               <div class="row">
                   <div class="col-md-6">
                   <p><a href="" class="btn btn-primary btn-lg"></a></p>
@@ -159,7 +159,7 @@
             </div>
 
             <div class="col-md-6">
-              <h3 class="template-title-example">ビザンチン美術（4世紀～13世紀）</h2>
+              <h3 class="template-title-example">ロマネスク美術（10世紀末～12世紀）</h2>
               <div class="row">
                   <div class="col-md-6">
                   <p><a href="" class="btn btn-default btn-lg"></a></p>
@@ -171,10 +171,10 @@
         </div>
         
         <div class="template-example">
-          <h2 class="template-title-example">Inputs</h2>
+          <h2 class="template-title-example">ルネサンス美術（14～16世紀）</h2>
 
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
+              <label for="exampleInputEmail1">古代ギリシャ・ローマ文化への回帰、革新的で自由な表現を訴求した美術様式である。最初イタリアを中心に勃興し、その後ヨーロッパ諸国へ広がった。レオナルド・ダ・ヴィンチ、ラファエロ、ミケランジェロなどの天才美術家が生まれたのもこの時代だ。</label>
               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
             </div>
 
@@ -191,10 +191,10 @@
             <div class="form-group">
               <label class="checkbox-inline">
                 <input 
-                type="checkbox" id="inlineCheckbox1" value="option1"> Email me a copy
+                type="checkbox" id="inlineCheckbox1" value="option1"> 
               </label>
               <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox2" value="option2"> I am a human
+                <input type="checkbox" id="inlineCheckbox2" value="option2"> 
               </label>
             </div>
 
