--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                   <p>モン・サン＝ミシェルはフランス西海岸、サン・マロ湾上に浮かぶ小島、及びその上にそびえる修道院である。カトリックの巡礼地のひとつであり「西洋の驚異」と称された。更に、1979年には「モン・サン＝ミシェルとその湾」としてユネスコの世界遺産に登録されている。</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/OIP.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/OIP.jpg src_10166942.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
