--- a/works.html
+++ b/works.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                        <img src="./assets/images/2136cea9e1b21ab1ad6d2c1d9c59480f.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
