--- a/work.html
+++ b/work.html
@@ -86,8 +86,8 @@
             <p>イチゴのミルフィーユ</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/R.jpg" class="img-responsive" alt="">
+            <p>サクサク食感のミルフィーユ</p>
           </div>
         </div>
       </div>
